# toyHTTPd

./: CMakeLists.txt  LICENSE  main.cpp  readme.md
test/: requestheader
utils/: Buffer.hpp  Cache.hpp  IoHandler.hpp  NetBuffer.hpp  NetCoding.hpp  NonCopyable.hpp  RequestNResponse.h  RqsNRsp.hpp  StaticHandler.hpp  ThreadPool.hpp
